--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@
  label {
      display: inline-block;
      width: 120px;
+     align-items: center;
+     justify-content: center;
  }
 
  .calc-button {
