--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,6 @@
  label {
      display: inline-block;
      width: 120px;
-     align-items: center;
-     justify-content: center;
  }
 
  .calc-button {
@@ -42,3 +40,12 @@ h3{
      justify-content: center;
      height: 80px;
 }
+
+.input-container{
+    display: flex;
+    margin:auto;
+    width:100%;
+    flex-direction: column;
+    align-items: center;
+}
+
